Updated NiFi and Pulsar versions